<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetectionResults">

    <LinearLayout
        android:id="@+id/resultsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/stage_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_text"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:textColor="@color/custom_blue"
            android:textSize="40sp"></TextView>

        <ImageButton
            android:onClick="goHome"
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.20"
            android:src="@drawable/home"
            android:scaleType="fitCenter"
            android:background="@null"
            android:tint="@color/custom_blue"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="Home"/>

        <ImageButton
            android:onClick="redo"
            android:id="@+id/repeatBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.20"
            android:src="@drawable/redo__1_"
            android:scaleType="fitCenter"
            android:background="@null"
            android:tint="@color/custom_blue"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="Confidence"/>

        <ImageButton
            android:onClick="openResultsOverlay"
            android:id="@+id/confidenceBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.20"
            android:src="@drawable/options_list"
            android:scaleType="fitCenter"
            android:background="@null"
            android:tint="@color/custom_blue"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="Confidence"/>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/buttonsHv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/resultsHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/all"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selected_option_border"
                android:textColor="@color/white"
                android:text="@string/all" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/onePenny"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/__1p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoPence"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/__2p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fivePence"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/_5p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tenPence"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/_10p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twentyPence"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/_20p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiftyPence"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/_50p" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/onePound"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:text="@string/_1P" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoPound"
                android:onClick="performDetection"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/default_option_border"
                android:textColor="@color/custom_blue"
                android:layout_marginEnd="10dp"
                android:text="@string/_2P" />
        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/resultsImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/actionsBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsHv"></ImageView>

    <LinearLayout
        android:id="@+id/actionsBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/resultsImage">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:background="@drawable/selected_option_border"
            android:textColor="@color/white"
            android:text="Results" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:background="@drawable/selected_option_border"
            android:text="Add Box"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:background="@drawable/delete_box_border"
            android:text="Remove Box"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selected_option_border"
            android:textColor="@color/white"
            android:text="Save Image" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>